@@ -1,9 +1,9 @@
 plugins {
 	kotlin("jvm") version "2.2.10"
 	kotlin("plugin.spring") version "2.2.10"
-	id("org.springframework.boot") version "4.0.0"
+	id("org.springframework.boot") version "4.0.2"
 	id("io.spring.dependency-management") version "1.1.7"
-	id("io.sentry.jvm.gradle") version "5.12.2"
+	id("io.sentry.jvm.gradle") version "6.0.0"
 	id("org.owasp.dependencycheck") version "12.2.0"
 	kotlin("plugin.jpa") version "2.2.10"
 }
@@ -46,7 +46,12 @@ dependencies {
 //    implementation("com.vonage:server-sdk-kotlin:2.1.1")
     //twilio
     implementation("com.twilio.sdk:twilio:9.2.1")
-    //redis
+    //patch vulnerabilities dependencies
+	implementation("commons-io:commons-io:2.21.0")
+	implementation("org.json:json:20251224")
+	implementation("com.ongres.scram:scram-common:3.2")
+	implementation("io.netty:netty-codec-http2:4.2.9.Final")
+	implementation("io.grpc:grpc-netty-shaded:1.78.0")
 //    implementation("org.springframework.boot:spring-boot-starter-session-data-redis")
     //websocket
     implementation("org.springframework.boot:spring-boot-starter-websocket")
@@ -84,13 +89,18 @@ dependencies {
     runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")
 	compileOnly("org.projectlombok:lombok")
 	// @sentry
-	implementation("io.sentry:sentry-opentelemetry-agent:8.22.0")
-	implementation("io.r2dbc:r2dbc-postgresql")
+	implementation("io.sentry:sentry:8.31.0")
+//	implementation("io.sentry:sentry-opentelemetry-agent:8.22.0")
+//	implementation("io.sentry:sentry-spring-boot-starter-jakarta:8.31.0")
+//	implementation(platform("io.sentry:sentry-bom:8.31.0"))
+	//implementation("io.r2dbc:r2dbc-postgresql")
 	implementation("io.r2dbc:r2dbc-pool:1.0.2.RELEASE")
-	implementation("io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE")
+	//implementation("io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE")
+	implementation("org.postgresql:r2dbc-postgresql:1.1.1.RELEASE")
 	implementation("org.springframework.boot:spring-boot-starter-flyway")
     runtimeOnly("org.postgresql:postgresql")
 	runtimeOnly("org.flywaydb:flyway-database-postgresql:11.19.0")
+	runtimeOnly("com.ongres.scram:scram-common:3.2")
 //	developmentOnly("org.springframework.boot:spring-boot-devtools")
 //	developmentOnly("org.springframework.boot:spring-boot-docker-compose")
 	annotationProcessor("org.projectlombok:lombok")
@@ -125,7 +135,17 @@ allOpen {
 	annotation("jakarta.persistence.MappedSuperclass")
 	annotation("jakarta.persistence.Embeddable")
 }
+configurations.configureEach {
+	exclude(group = "io.sentry", module = "sentry-logback")
+}
+
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+}
+tasks.withType<JavaExec>().configureEach {
+	jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
+tasks.withType<Test>().configureEach {
+	jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
